Add mermaid support

--- a/docs/_includes/custom-head.html
+++ b/docs/_includes/custom-head.html
@@ -4,19 +4,8 @@ This is an updated head.html file to support mermaid diagram based on the theme 
 
 https://stuff-things.net/2025/01/19/mermaid-diagramming-in-jekyll-in-2025
 
+change the head.html to custom-head.html
 -->
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
-</head>
 
 <script type="module">
  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
